cmake_minimum_required(VERSION 3.1)
project( shakyo )
add_executable( sample1-1 sample1-1.c )
add_executable( sample1-2 sample1-2.c )
add_executable( sample1-2-2 sample1-2-2.c )
add_executable( sample1-3 sample1-3.c )
add_executable( sample4-1 sample4-1.c )
add_executable( sample4-2 sample4-2.c )
add_executable( sample4-3 sample4-3.c )
add_executable( sample4-4 sample4-4.c )
add_executable( sample4-5 sample4-5.c )
add_executable( sample5-1 sample5-1.c )
add_executable( sample5-2 sample5-2.c )
add_executable( sample5-3 sample5-3.c )
add_executable( sample6-1 sample6-1.c )
add_executable( sample6-2 sample6-2.c )
add_executable( sample6-3 sample6-3.c )
add_executable( sample6-4 sample6-4.c )
add_executable( sample6-5 sample6-5.c )
add_executable( sample6-6 sample6-6.c )
add_executable( sample6-7 sample6-7.c )
add_executable( sample6-8 sample6-8.c )
add_executable( sample8-1 sample8-1.c )
add_executable( sample8-2 sample8-2.c )
add_executable( sample8-3 sample8-3.c )
add_executable( sample8-4 sample8-4.c )
add_executable( sample9-1 sample9-1.c )
add_executable( sample9-2 sample9-2.c )
add_executable( sample9-3 sample9-3.c )
add_executable( sample9-4 sample9-4.c )
add_executable( sample9-5 sample9-5.c )
add_executable( sample9-6 sample9-6.c )
add_executable( sample9-7 sample9-7.c )
add_executable( sample9-8 sample9-8.c )
add_executable( sample9-9 sample9-9.c )
add_executable( sample9-10 sample9-10.c )
add_executable( sample9-11 sample9-11.c )
add_executable( sample9-12 sample9-12.c )
add_executable( sample9-13 sample9-13.c )
add_executable( sample9-14 sample9-14.c )
add_executable( sample9-15-max sample9-15-max.c )
add_executable( sample9-15-smallest sample9-15-smallest.c )
add_executable( sample9-16 sample9-16.c )
add_executable( sample9-17 sample9-17.c )
add_executable( sample9-18 sample9-18.c )
add_executable( sample9-19 sample9-19.c )
add_executable( sample9-20 sample9-20.c )
add_executable( sample10-1 sample10-1.c )
add_executable( sample10-2 sample10-2.c )
add_executable( sample11-1 sample11-1.c )
add_executable( sample11-2 sample11-2.c )
add_executable( sample11-3 sample11-3.c )
add_executable( sample11-4 sample11-4.c )
add_executable( sample11-5 sample11-5.c )
add_executable( sample11-6 sample11-6.c )
add_executable( sample11-7 sample11-7.c )
add_executable( sample11-8 sample11-8.c )
add_executable( sample11-9 sample11-9.c )
add_executable( sample11-9_Experiment sample11-9_Experiment.c )
add_executable( sample11-10 sample11-10.c )
add_executable( sample11-11 sample11-11.c )
add_executable( sample11-12 sample11-12.c )
add_executable( sample11-13 sample11-13.c )
add_executable( sample11-14 sample11-14.c )
add_executable( sample11-15 sample11-15.c )
add_executable( sample11-16 sample11-16.c )
add_executable( sample11-17 sample11-17.c )
add_executable( sample11-18 sample11-18.c )
add_executable( sample11-19 sample11-19.c )
add_executable( sample11-20 sample11-20.c )
add_executable( sample11-21 sample11-21.c )
add_executable( sample11-22 sample11-22.c )
add_executable( sample11-23 sample11-23.c )
add_executable( sample11-24 sample11-24.c )
add_executable( sample11-25 sample11-25.c )
add_executable( sample11-26 sample11-26.c )
add_executable( sample11-27 sample11-27.c )
add_executable( sample11-28 sample11-28.c )
add_executable( sample11-29 sample11-29.c )
add_executable( sample11-30 sample11-30.c )
